force-app/main/default/objects/GoogleConfig__c/GoogleConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>GoogleConfig</label>
</CustomObject>