force-app/main/default/objects/GoogleConfig__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>AccessToken</label>
    <type>TextArea</type>
</CustomField>