force-app/main/default/objects/GoogleConfig__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <label>Client_Id</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>