force-app/main/default/objects/GoogleConfig__c/fields/RedirectURI__c.field-meta.xml
<CustomField>
    <fullName>RedirectURI__c</fullName>
    <label>RedirectURI</label>
    <type>Url</type>
</CustomField>