force-app/main/default/objects/GoogleConfig__c/fields/RefereshToken__c.field-meta.xml
<CustomField>
    <fullName>RefereshToken__c</fullName>
    <label>RefereshToken</label>
    <type>TextArea</type>
</CustomField>