force-app/main/default/objects/GoogleConfig__c/fields/Secretkey__c.field-meta.xml
<CustomField>
    <fullName>Secretkey__c</fullName>
    <label>Secretkey</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>