force-app/main/default/objects/GoogleConfig__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <label>UserID</label>
    <length>200</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>